Fixed navbar issue on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,14 @@ footer {
     color: #000;
 }
 
+@media only screen and (max-width: 600px) {
+    nav {
+        line-height: 28px;
+        
+    }
+}
+
+
 nav ul a {
     color: #000;
 }
